# Projects_WSL

./: .gitignore  README.md
AlphaNova_Competition_Aug_2025/: README.md  aug2025.ipynb  data_loader.py  predictor.py
NLP/autocorref/: autocorref_ui.py  autocrref.ipynb
NLP/autocorref/src/: functions.py
NLP/youtube_transcripts/poc_one_url/: 1_get_audio_transcripts.py  2_token.py  config.py
Time_series/Freight_Paper/: freight copy.ipynb  freight.ipynb  freight_data_etl.ipynb  freight_models.ipynb
Trading_competitions/AlphaNova_Competition_Aug_2025/: evaluation.py  pyproject.toml  runner.py  sample_submission.py  utils.py
Trading_competitions/AlphaNova_Competition_Feb_2025/notebooks/: AlphaNovaContestTemplate.24.02.25.ipynb
Trading_competitions/AlphaNova_Competition_Feb_2025/trading_strategy/: trading_md.py
Trading_competitions/AlphaNova_Competition_Feb_2025/trading_strategy/src/: laod_data.py  risk_measure.py  strategy_cma.py  strategy_xgboost.py
